expose the max direct memory allowed in jvm info, and guess better then receive buffer size predictor size based on it